--- a/style.css
+++ b/style.css
@@ -20,10 +20,55 @@ main {
     background-color: #fff;
     padding: 50px;
 }
+.tool-bar{
+    margin-top:10px;
+    display:flex;
+    border-bottom: 1px solid #a2a9b1;
+    justify-content: space-between;
+    margin-bottom:15px;
+}
+.tool-bar::after{
+    bottom: 1px;
+}
+.insert{
+    padding-left: 1.6em;
+    font-style: italic;
+}
+a::after{
+    background: #17baaa;
+    bottom: -8px;
+    content: "";
+    height: 2px;
+    left: 0;
+    transform: scaleX(0);
+    position: absolute;
+    transition: all .25s ease;
+    width: 100%;
+}
+a:hover::after{
+    transform: scaleX(1)
+}
+
+.tool-bar p{
+    margin: 0 10px 0 0;
+}
+.flex-div{
+    display:flex;
+}
 .content{
-padding-left: 100px;
+
+}
+.little-text{
+    font-size: 85%;
+}
+.table{
+    display: table;
+    border-collapse: separate;
+    box-sizing: border-box;
+    text-indent: initial;
 }
 a {
+    position:relative;
     text-decoration: none;
     color: #3366cc;
     background: none;
@@ -157,9 +202,13 @@ p {
     max-height: calc(100vh - 16px);
     position: sticky;
     display: block;
-    font-size: 1rem;
-    top: 100px;
+    font-size: 0.9rem;
+    top: 80px;
     left: 0px;
+    width: auto;
+    padding-left: 0px;
+    margin-right: 40px;
+    line-height: 24px;
 }
 .search{
 margin-left: 30px
@@ -170,11 +219,36 @@ margin-left: 30px
 .right-block img{
     display: block;
 }
-.right-block{
-    background-color:#f8f9fa;
+.table-name{
+    font-size: 125%;
+    font-weight: bold;
+    text-align: center;
+}
+.right-block-position{
+    float: right;
+    text-align: center;
+    font-size: 88%;
+    width:auto;
+    height: auto;
+}
+.right-block {
+    margin: 0.5em 0 0.5em 1em;
+    background-color: #f8f9fa;
     border: 1px solid #a2a9b1;
-    padding: 5px;
-    height: fit-content;
+    padding: 1.5em;
+
+    text-align: center;
+    font-size: 88%;
+    width:auto;
+    height: auto;
+}
+
+.right-block img {
+    display: block;
+    margin: 0 auto;
+}
+.right-block span{
+    font-size: 12px;
 }
 .checkbox{
   background: url("./3.png") no-repeat;
