--- a/style.css
+++ b/style.css
@@ -15,10 +15,13 @@ body{
 main {
     position: relative;
     translate: scale(1.0);
-    display: flex;
-    max-width: 1500px;
+    display: grid;
+    max-width: 1600px;
     background-color: #fff;
-    padding: 50px;
+    padding-left: 3.25em;
+    padding-right: 3.25em;
+    padding-top: 3em;
+    grid-template-columns:0.8fr 3fr 0.8fr;
 }
 .tool-bar{
     margin-top:10px;
@@ -26,6 +29,7 @@ main {
     border-bottom: 1px solid #a2a9b1;
     justify-content: space-between;
     margin-bottom:15px;
+    padding-bottom:10px;
 }
 .tool-bar::after{
     bottom: 1px;
@@ -34,32 +38,77 @@ main {
     padding-left: 1.6em;
     font-style: italic;
 }
-a::after{
-    background: #17baaa;
-    bottom: -8px;
-    content: "";
-    height: 2px;
-    left: 0;
-    transform: scaleX(0);
-    position: absolute;
-    transition: all .25s ease;
-    width: 100%;
+a:hover {
+  text-decoration: underline;
 }
-a:hover::after{
-    transform: scaleX(1)
-}
-
-.tool-bar p{
+.tool-bar a , .tool-bar p{
     margin: 0 10px 0 0;
 }
 .flex-div{
     display:flex;
 }
 .content{
-
+    position: relative;
+    z-index: 0;
+    text-align: left;
+    padding-top: 0.05px;
+    padding-bottom: 0.05px;
+    max-width: 99.75em;
+    min-width: 31.25em;
+    margin: 0 auto;
+    background-color: #ffffff;
+    line-height: 1.6;
 }
+
 .little-text{
-    font-size: 85%;
+    font-size: 75%;
+}
+.owners-table tr{
+    background-color: #eaecf0;
+    padding-left: 5px;
+}
+.owners-table{
+    background-color: #f8f9fa;
+    color: #202122;
+    margin: 1em 0;
+    border: 1px solid #a2a9b1;
+    border-collapse: collapse;
+}
+.owners-table-body{
+    background-color: #f8f9fa;
+    color: #202122;
+    margin: 1em 0;
+    border: 1px solid #a2a9b1;
+    border-collapse: collapse;
+}
+.owners-table th {
+    border: 1px solid #000;
+    padding-left:5px;
+}
+.photo-lamborghini{
+    border: 1px solid #c8ccd1;
+    border-bottom: 0;
+    background-color: #f8f9fa;
+    margin: 0.5em 0 1.3em 1.4em;
+    clear: right;
+    float: right;
+}
+.photo-lamborghini img{
+    border: 1px solid #c8ccd1;
+    background: #f8f9fa;
+    margin: 3px;
+}
+
+.photo-text{
+    border: 1px solid #c8ccd1;
+    border-top: 0;
+    background-color: #f8f9fa;
+    font-size: 88.4%;
+    caption-side: bottom;
+    line-height: 1.4em;
+    word-break: break-word;
+    text-align: left;
+    padding: 0 6px 6px 6px;
 }
 .table{
     display: table;
@@ -67,9 +116,10 @@ a:hover::after{
     box-sizing: border-box;
     text-indent: initial;
 }
-a {
+a{
     position:relative;
     text-decoration: none;
+    word-break: break-word;
     color: #3366cc;
     background: none;
 }
@@ -80,6 +130,18 @@ ul{
 .header-start{
     display: flex;
     align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.logo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    text-decoration: none;
+    word-break: break-word;
+    color: #3366cc;
+    background: none;
 }
 .mv-logo{
     display: flex;
@@ -93,30 +155,36 @@ ul{
     margin-left: 5px;
 }
 .logo-wordmark{
-    width: 100%;
     display: block;
     margin: 0 auto;
     border: 0;
-
     vertical-align: middle;
+}
+.logo-container{
+
+    display: block;
+    height: 100%;
+    float: left;
 }
 .logo-taglink{
+    border: 0;
+    vertical-align: middle;
     display: block;
     margin: 5px auto 0;
-    border: 0;
-    vertical-align: middle;
+    width: 7.3125em;
+    height: 0.8125em;
 }
 .logo-icon{
-    display: block;
     float: left;
-    border: 0;
-    vertical-align: middle;
+    margin-right: 10px;
+    width: 3.125em;
+    height: 3.125em;
 }
 
 header{
     display: flex;
     position: absolute;
-    padding: 0 50px;
+    padding: 8px 50px;
     justify-content: space-between;
     top: 0;
     right: 0px;
@@ -172,12 +240,19 @@ header{
 .head-menu{
 margin-left: 24px;
 }
+.hide-content-label{
+display : flex;
+color: #54595d;
+border-bottom: 1px solid #E3E3E3;
+}
 h1{
+    font-weight: normal;
     display: block;
     padding: 0;
     font-family: 'Linux Libertine','Georgia','Times','Source Serif Pro',serif;
     border-bottom: 1px solid #a2a9b1;
     font-size: 2em;
+    margin-bottom: 10px;;
     margin-block-start: 0.67em;
     margin-block-end: 0.67em;
     margin-inline-start: 0px;
@@ -203,21 +278,66 @@ p {
     position: sticky;
     display: block;
     font-size: 0.9rem;
-    top: 80px;
+    top: 120px;
     left: 0px;
     width: auto;
-    padding-left: 0px;
-    margin-right: 40px;
+    padding: 0px;
+    margin-right: 100px;
     line-height: 24px;
+}
+.left-side-menu li:first-of-type{
+    font-weight:bold;
+}
+.left-side-menu li:first-of-type a{
+    color:black;
 }
 .search{
 margin-left: 30px
 }
 .registration{
     font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 .right-block img{
     display: block;
+}
+.menu-button{
+cursor:pointer;
+}
+table{
+    display: table;
+    border-collapse: separate;
+    box-sizing: border-box;
+    text-indent: initial;
+    border-spacing: 2px;
+    border-color: gray;
+}
+.table{
+    border: 1px solid #a2a9b1;
+    border-spacing: 3px;
+    background-color: #f8f9fa;
+    color: black;
+    margin: 0.5em 0 0.5em 1em;
+    padding: 0.2em;
+    float: right;
+    clear: right;
+    font-size: 88%;
+    line-height: 1.5em;
+    width: 22em;
+}
+.bold-text{
+    font-weight:bold;
+}
+tr{
+    display: table-row;
+    vertical-align: inherit;
+    border-color: inherit;
+}
+.align-left{
+    text-align:left;
 }
 .table-name{
     font-size: 125%;
@@ -227,10 +347,19 @@ margin-left: 30px
 .right-block-position{
     float: right;
     text-align: center;
+    z-index: 1;
+    position: relative;
     font-size: 88%;
-    width:auto;
+    width:271px;
     height: auto;
 }
+.right-block-position th{
+    padding: 8px;
+    text-align: left;
+    font-weight: bold;
+}
+
+
 .right-block {
     margin: 0.5em 0 0.5em 1em;
     background-color: #f8f9fa;
